...
  static let titleLabel = "\(PalindromeView.identifier)\\titleLabel"
  
  static let tableView = "\(PalindromeView.identifier)\\tableView"
  
  static let subtitleLabel = "\(PalindromeView.identifier)\\subtitleLabel"
  
  static let textField = "\(PalindromeView.identifier)\\textField"
  
  static let imageView = "\(PalindromeView.identifier)\\imageView"
  
  static let wrapperButton = "\(PalindromeView.identifier)\\wrapperButton"
  
  static let saveButton = "\(PalindromeView.identifier)\\saveButton"
}

public final class PalindromeView: UIView {
  
  // MARK: Properties
  
...
